# cutlass

./: .gitignore  CMakeLists.txt  CUDA.cmake  Makefile  run.sh
examples/: CMakeLists.txt
include/cutlass/: cutlass.h
include/cutlass/detail/: helper_macros.hpp
include/cutlass/gemm/device/: gemm.h  gemm_universal_adapter.h  gemm_universal_base.h
include/cutlass/gemm/kernel/: default_gemm_universal.h  gemm_layernorm_mainloop_fusion.h  gemm_planar_complex.h  gemm_planar_complex_array.h  gemm_streamk_with_fused_epilogue.h  gemm_universal.h  gemm_universal.hpp  gemm_universal_streamk.h  gemm_with_absmax.h  gemm_with_fused_epilogue.h  gemm_with_k_reduction.h  params_universal_base.h  rank_2k_universal.h  tile_scheduler.hpp
python/cutlass_library/: gemm_operation.py  generator.py  manifest.py
src/: .main.cu.swp  all_gemm_operations.cu  all_sm80_s16816gemm_f16_gemm_operations.cu  cutlass_tensorop_s16816gemm_f16_128x128_32x5_nt_align8.cu  enumerated_types.cpp  handle.cu  initialize_all.cpp  kernel.cu  main.cpp  main.cpp.bak  main.cu  manifest.cpp  operation_table.cu  options.cu  singleton.cu
test/unit/nvrtc/thread/: CMakeLists.txt
tools/: CMakeLists.txt
tools/profiler/: CMakeLists.txt
tools/profiler/include/cutlass/profiler/: cutlass_profiler.h  device_allocation.h  device_context.h  enumerated_types.h  gemm_operation_profiler.h  operation_profiler.h  options.h  problem_space.h  reduction_operation_profiler.h
tools/profiler/src/: cublas_helpers.cu  cutlass_profiler.cu  device_allocation.cu  device_context.cu  enumerated_types.cpp  gemm_operation_profiler.cu  main.cpp  operation_profiler.cu  options.cu  performance_report.cpp  problem_space.cpp
